<resources>
    <string name="app_name">GoWith.me</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_favorites">Favorites</string>
    <string name="interests">Интересы</string>
    <string name="map">Карта</string>
    <string name="nearby_events">События поблизости</string>
    <string name="events_in">События в </string>
    <string name="main">Главная</string>
    <string name="subscriptions">Подписки</string>
    <string name="create_new_event">Создать новый ивент</string>
    <string name="profile">Профиль</string>
    <!--    <string name="author_name">%1$s %2$s</string>-->
    <string name="followers_num">%1$s уже подписались</string>
    <string name="kzt">₸</string>
    <string name="search_hint">Найти</string>
    <string name="all">Все</string>
    <string name="create_event">Создать событие</string>
    <string name="back_to_list">Назад к списку</string>

    <!--  Auth  -->

    <!--    Create Event -->
    <string name="add_photo_alter_title">Добавить фото</string>
    <string name="take_photo_option">Сделать фото</string>
    <string name="choose_from_gallery_option">Выбрать фото из галереи</string>
    <string name="cancel_option">Отменить</string>
    <string name="text_camera_permission_not_granted">Нет разрешения для использования камеры</string>
    <string name="text_yes">Ок</string>
    <string name="text_no">Нет</string>
    <string name="alert_title_are_you_sure_to_leave">Вы уверены, что хотите покинуть данный экран?</string>
    <string name="alert_message_are_you_sure_to_leave">Введунные данные будут потеряны.</string>
    <string name="error_text_empty_input_field">Не верные данные</string>
    <string name="text_ready">Готов</string>
    <string name="title_address_map">Адрес события</string>

    <!--    Profile-->
    <string name="last_activity">Последняя активность:</string>
    <string name="text_my_followers">Мои подписчики (%1$s)</string>
    <string name="text_my_following">Мои подписки (%1$s)</string>
    <string name="text_my_events">Мои ивенты (%1$s)</string>

    <string name="text_followers">Подписчики (%1$s)</string>
    <string name="text_following">Подписки (%1$s)</string>
    <string name="text_events">Ивенты (%1$s)</string>


    <string name="text_saved_events">Сохраненные ивенты (%1$s)</string>
    <string name="text_notifications">Уведомления</string>
    <string name="text_email">email: %1$s</string>
    <string name="text_phone_number">Тел. : %1$s</string>
    <string name="text_edit">Редактировать</string>

    <string name="text_price">Цена: %1$s</string>
    <string name="text_free">Бесплатно</string>
    <string name="text_start_date">Начало: %1$s</string>
    <string name="text_end_date">Конец: %1$s</string>

    <string name="title_event_list_viewed_events">Последняя активность</string>
    <string name="title_event_list_my_events">Мои ивенты</string>
    <string name="title_event_list_saved_events">Сохраненные ивенты</string>
    <string name="title_event_list">Сприсок событий</string>
    <string name="text_users_subscribed">Подписалось на событие: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_special_list">Специально для вас</string>
    <string name="title_most_viewed_list">Популярные</string>
    <string name="title_upcoming_list">Вот вот начнется</string>
    <string name="title_new_list">Новые</string>
    <string name="text_pls_auth">Пожалуйста, авторизуйтесь</string>
    <string name="text_loading_error">Упсс что то пошло не так :( Попробуйте еще раз</string>

    <string name="text_subscribe_on_user">Подписаться</string>
    <string name="text_unsubscribe_from_user">Отписаться</string>
    <string name="sub_title_app">Встречайте новый способ сотрудничества</string>
    <string name="under_line"><u>%1$s</u></string>


</resources>
