<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/interests" />
    <item
        android:id="@+id/nav_map_list"
        android:icon="@drawable/nav_map_ic"
        android:title="@string/map" />
    <item
        android:id="@+id/nav_create_new_event"
        android:icon="@drawable/add_event_button"
        android:title="@string/create_new_event" />
    <item
        android:id="@+id/nav_friends_events"
        android:icon="@drawable/favorites_nav"
        android:title="@string/subscriptions" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/nav_profile"
        android:title="@string/profile" />

</menu>
