<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.gowithme.ui.profile.viewmodel.ProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/avatarImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_person"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/profile_margin_start"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-black"
                android:text="@{viewModel.profileInfo.fullName}"
                android:textColor="#000"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Джон Сноу" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/profile_margin_start"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@{ viewModel.profileInfo.phone }"
                android:textColor="#3F3F3F"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@id/name"
                tools:text="@string/text_phone_number" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/profile_margin_start"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@{ viewModel.profileInfo.email }"
                android:textColor="#3F3F3F"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@id/phoneNumber"
                tools:text="@string/text_email" />

            <ImageView
                android:id="@+id/location_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="@dimen/profile_margin_start"
                android:layout_marginTop="15dp"
                android:src="@drawable/location"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@id/email"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-black"
                android:textColor="#212121"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/location_img"
                app:layout_constraintTop_toBottomOf="@id/email"
                tools:text="Алматы" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:background="@drawable/categories_bg"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_edit"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/location_img"
                tools:layout_editor_absoluteX="20dp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="#30212121"
                app:layout_constraintTop_toBottomOf="@+id/button" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/last_activity"
                android:textColor="#212121"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <ImageView
                android:id="@+id/allViewedEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_arrow_forward"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tools:ignore="ContentDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/viewEventsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:listitem="@layout/item_viewed_event"/>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="#30212121"
                app:layout_constraintTop_toBottomOf="@+id/viewEventsRecycler" />

            <TextView
                android:id="@+id/myFollowers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ripple"
                android:fontFamily="sans-serif"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:text="@{ @string/text_my_followers(viewModel.profileInfo.followersCount) }"
                android:textColor="#212121"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/myFollowing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ripple"
                android:fontFamily="sans-serif"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:text="@{ @string/text_my_following(viewModel.profileInfo.followingCount) }"
                android:textColor="#212121"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myFollowers" />

            <TextView
                android:id="@+id/myEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ripple"
                android:fontFamily="sans-serif"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:text="@{ @string/text_my_events(viewModel.profileInfo.eventsCreatedCount) }"
                android:textColor="#212121"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/myFollowing" />

            <TextView
                android:id="@+id/savedEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ripple"
                android:fontFamily="sans-serif"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:text="@{ @string/text_saved_events(viewModel.profileInfo.savedEventsCount) }"
                android:textColor="#212121"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/myEvents" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="#30212121"
                app:layout_constraintTop_toBottomOf="@+id/savedEvents" />

            <TextView
                android:id="@+id/notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/text_notifications"
                android:textColor="#212121"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view3" />

            <Switch
                android:id="@+id/notifications_switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <!--            <TextView-->
            <!--                android:id="@+id/other_cities"-->
            <!--                android:layout_width="290dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginLeft="20dp"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:layout_marginRight="20dp"-->
            <!--                android:fontFamily="sans-serif"-->
            <!--                android:text="Показывать события из других городов"-->
            <!--                android:textColor="#212121"-->
            <!--                android:textSize="18sp"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/notifications" />-->

            <!--            <Switch-->
            <!--                android:id="@+id/other_cities_switcher"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:layout_marginRight="20dp"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/notifications_switcher" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
